--- a/index.html
+++ b/index.html
@@ -116,7 +116,9 @@
 	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
 	  ga('create', 'UA-364839-37', 'auto');
+	  ga('create', 'UA-364839-38', 'auto');
 	  ga('send', 'pageview');
+	  
 
 	</script>
 </body>
